[gd_scene load_steps=3 format=3 uid="uid://cxb1t5m8bbadl"]

[ext_resource type="Script" path="res://Scenes/Games/DodgeTheJareds/hud.gd" id="1_5do0v"]
[ext_resource type="FontFile" uid="uid://deg4bsod6ehpy" path="res://Scenes/Games/DodgeTheJareds/fonts/Xolonium-Regular.ttf" id="1_6tiio"]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_5do0v")

[node name="ScoreLabel" type="Label" parent="."]
offset_top = 1.0
offset_right = 1701.0
offset_bottom = 85.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_6tiio")
theme_override_font_sizes/font_size = 69
text = "0"
horizontal_alignment = 2

[node name="Message" type="Label" parent="."]
offset_left = 363.0
offset_top = 270.0
offset_right = 1294.0
offset_bottom = 461.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_6tiio")
theme_override_font_sizes/font_size = 69
horizontal_alignment = 1
autowrap_mode = 2

[node name="HighScoreLabel" type="Label" parent="."]
offset_top = 864.0
offset_right = 1701.0
offset_bottom = 948.0
theme_override_fonts/font = ExtResource("1_6tiio")
theme_override_font_sizes/font_size = 69
vertical_alignment = 1

[node name="StartButton" type="Button" parent="."]
offset_left = 580.0
offset_top = 541.0
offset_right = 1057.0
offset_bottom = 633.0
tooltip_text = "press space to click this button if you so desire to do so."
theme_override_colors/font_hover_color = Color(0.678431, 0.380392, 0.65098, 1)
theme_override_fonts/font = ExtResource("1_6tiio")
theme_override_font_sizes/font_size = 49
text = "dodge them 'gas"
icon_alignment = 1

[node name="MessageTimer" type="Timer" parent="."]

[connection signal="pressed" from="StartButton" to="." method="onStartButtonPressed"]
[connection signal="timeout" from="MessageTimer" to="." method="onMessageTimerTimeout"]
